--- a/Sistema-Bancario/src/interfaces/Main.form
+++ b/Sistema-Bancario/src/interfaces/Main.form
@@ -300,7 +300,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="12" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="####"/>
+                    <Property name="text" type="java.lang.String" value="######"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -398,11 +398,11 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="0">
-                <Column editable="false" title="N&#xfa;mero" type="java.lang.Object"/>
-                <Column editable="false" title="Titular" type="java.lang.Object"/>
-                <Column editable="false" title="Saldo" type="java.lang.Object"/>
-                <Column editable="false" title="Tipo" type="java.lang.Object"/>
-                <Column editable="false" title="Senha" type="java.lang.Object"/>
+                <Column editable="false" title="N&#xfa;mero" type="java.lang.String"/>
+                <Column editable="false" title="Titular" type="java.lang.String"/>
+                <Column editable="false" title="Saldo" type="java.lang.Double"/>
+                <Column editable="false" title="Tipo" type="java.lang.String"/>
+                <Column editable="false" title="Limite/Poupan&#xe7;a" type="java.lang.Double"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
