--- a/Sistema-Bancario/src/interfaces/Cadastro.form
+++ b/Sistema-Bancario/src/interfaces/Cadastro.form
@@ -47,7 +47,7 @@
               <EmptySpace max="32767" attributes="0"/>
               <Component id="botaoCadastro" min="-2" pref="101" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="botalCancelar" min="-2" pref="101" max="-2" attributes="0"/>
+              <Component id="botaoCancelar" min="-2" pref="101" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -70,7 +70,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="botaoCadastro" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="botalCancelar" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoCancelar" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
@@ -98,7 +98,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoCadastroActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="botalCancelar">
+    <Component class="javax.swing.JButton" name="botaoCancelar">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="12" style="0"/>
@@ -106,7 +106,7 @@
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botalCancelarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoCancelarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
